<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abrahamxsaboter.practica_formularios.MainActivity"
    android:background="@drawable/fondo">

    <!--Nombre-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idNombre"
        android:hint="@string/txtNombre"
        android:layout_alignBaseline="@+id/txtNom"
        android:layout_alignBottom="@+id/txtNom"
        android:layout_alignStart="@+id/idDireccion"
        android:textColor="?attr/colorButtonNormal" />

    <!--Direccion-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idDireccion"
        android:hint="@string/txtDireccion"
        android:layout_alignBaseline="@+id/txtDirec"
        android:layout_alignBottom="@+id/txtDirec"
        android:layout_alignStart="@+id/idTelefono"
        android:textColor="?attr/colorButtonNormal" />
    <!--Telefono-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idTelefono"
        android:hint="@string/txtTelefono"
        android:layout_alignBaseline="@+id/txtTel"
        android:layout_alignBottom="@+id/txtTel"
        android:layout_alignStart="@+id/idControl"
        android:textColor="?attr/colorButtonNormal" />

    <!--No. Control-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginStart="11dp"
        android:id="@+id/idControl"
        android:hint="@string/txtNo_control"
        android:layout_below="@+id/idTelefono"
        android:layout_toEndOf="@+id/txtControl"
        android:textColor="?attr/colorButtonNormal" />
    <!--Fecha-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/idFecha"
        android:layout_below="@+id/idControl"
        android:layout_alignStart="@+id/idControl"
        android:textColor="?attr/colorButtonNormal" />
    <TextView
        android:text="@string/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNom"
        tools:text="@string/txtNombre"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDirec"
        tools:text="@string/txtDireccion"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/idNombre"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/txtTel"
        tools:text="@string/txtTelefono"
        android:layout_below="@+id/idDireccion"
        android:layout_alignEnd="@+id/txtDirec" />

    <TextView
        android:text="@string/txtNo_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtControl"
        tools:text="@string/txtNo_control"
        android:layout_alignBaseline="@+id/idControl"
        android:layout_alignBottom="@+id/idControl"
        android:layout_alignStart="@+id/txtTel" />

    <TextView
        android:text="@string/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idtxtFech"
        android:layout_alignBaseline="@+id/idFecha"
        android:layout_alignBottom="@+id/idFecha"
        android:layout_alignStart="@+id/txtControl" />

    <Button
        android:text="@string/btnfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFecha"
        android:onClick="mostrarCalendario"
        android:layout_below="@+id/idFecha"
        android:layout_alignStart="@+id/idFecha" />

    <Button
        android:text="@string/btnEnvio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnvio2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
